--- a/ModularDecomposition_v3/Changes.txt
+++ b/ModularDecomposition_v3/Changes.txt
@@ -28,3 +28,13 @@
 
 
 Noch vorzunehmende Änderungen:
+
+- MD_Tree List erstellen für Listenlogik --> diese ist für das löschen der Bäume verantwortlich
+- Überlegen, ob die active edges anstatt in einem unordered_set auch direkt im Knoten gespeichert werden können
+- getMaxContSubTrees: Darf nur proportional zur Größe von X sein, nicht zur Größe des Baumes:
+	Jeder Wert muss wissen, wo er im Baum zu finden ist
+- Versuchen, ohne Verwendung von unordered_set auszukommen: Entweder in einem Vektor speichern oder schauen, ob die Information
+	schon vorher vorhanden war.
+- markNodeAndAncestors: Sobald ein Knoten schon makiert ist, kann abgebrochen werden
+- (z.B. getSubgraph): Anstatt unordered_set zwei vektoren, mit den element zum drüberiterieren, 
+	und bool-Werten ob diese inkludiert werden sollen --> Informationen in einer neuen Klasse kapseln
